--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <h1 class="text-3xl font-bold underline">Hello world!</h1>
